# ovos-skill-config-tool

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Justfile  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  unit_tests.yml
frontend/ovos-settings-ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/ovos-settings-ui/public/: config.json
frontend/ovos-settings-ui/src/: App.tsx  index.css
frontend/ovos-settings-ui/src/components/: Header.tsx  LoginPage.tsx  NewSettingEditor.tsx  SettingEditor.tsx  SkillConfigurator.tsx
frontend/ovos-settings-ui/src/components/ui/: accordion.tsx
frontend/ovos-settings-ui/src/lib/: auth.tsx
ovos_skill_config/: main.py  web.py
ovos_skill_config/static/: app.css  app.js  index.html
ovos_skill_config/static/assets/: index-B0NpPZiK.js  index-BOGhjLK5.css  index-BXumuDhA.js  index-Bnal05wx.js  index-CLctCwWl.js  index-DGnF13Y6.js  index-DXozbpm0.js  index-KTdYxpZf.js  index-wAmFI38s.js
ovos_skill_config/templates/: base.html  index.html  login.html
ovos_skill_config/templates/partials/: _macros.html  skill_card.html
tests/: test_main.py  test_web.py
