[project]
authors = [{ "name" = "Oscillate Labs", "email" = "mike@oscillatelabs.net" }]
name = "ovos-skill-config"
version = "0.1.0"
description = "OpenVoiceOS/Neon Skills Configuration Tool"
license = { "file" = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = ["fastapi>=0.115.6", "json-database>=0.7.0", "uvicorn>=0.34.0"]

[dependency-groups]
dev = ["ruff>=0.8.4"]

[tool]
uv.package = true

[build-system]
requires = ["setuptools >= 46.1.0", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "ovos_skill_config" }
